migration-result/docs/ver/16.x/access-controls/access-request-plugins/servicenow.mdx
---
title: Access Requests with ServiceNow
description: How to set up Teleport's ServiceNow plugin for privilege elevation approvals.
version: '16.x'
---

With Teleport's ServiceNow integration, engineers can access the infrastructure
they need to resolve incidents quickly, without granting longstanding admin permissions
that can become a vector for attacks.

Teleport's ServiceNow integration allows you to treat Teleport Access
Requests as ServiceNow incidents, notify the appropriate on-call team, and
approve or deny the requests via Teleport. You can also configure the plugin to
approve Access Requests automatically if the user making the request is in
a specific on-call rotation.

This guide will explain how to set up Teleport's Access Request plugin for
ServiceNow.

## Prerequisites

- Access to an Enterprise edition of Teleport running in your environment.

  For information about the differences between Teleport editions, see [Comparing
  editions](/docs/ver/16.x/choose-an-edition/introduction#comparing-editions).

- The Enterprise `tctl` admin tool and `tsh` client tool version >= 16.0.0-dev.

  You can verify the tools you have installed by running the following commands:

  ```code
  $ tctl version
  # Teleport Enterprise v16.0.0-dev go1.22

  $ tsh version
  # Teleport v16.0.0-dev go1.22
  ```

  You can download these tools by following the appropriate [Installation
  instructions](/docs/ver/16.x/installation#installation-instructions) for your environment and Teleport edition.

- An ServiceNow account with access to read and write to and from the 'incident' table.
- To check that you can connect to your Teleport cluster, sign in with `tsh login`, then
  verify that you can run `tctl` commands using your current credentials.
  `tctl` is supported on macOS and Linux machines.

  For example:
  ```code
  $ tsh login --proxy=teleport.example.com --user=email@example.com
  $ tctl status
  # Cluster  teleport.example.com
  # Version  16.0.0-dev
  # CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
  ```
  If you can connect to the cluster and run the `tctl status` command, you can use your
  current credentials to run subsequent `tctl` commands from your workstation.
  If you host your own Teleport cluster, you can also run `tctl` commands on the computer that
  hosts the Teleport Auth Service for full permissions.

## Step 1/4. Create services

We will configure the ServiceNow plugin to create an incident when
certain users create an Access Request.

## Step 2/4. Define RBAC resources

The Teleport ServiceNow plugin works by receiving Access Request events from the
Teleport Auth Service and, based on these events, interacting with the ServiceNow
API.

Before making the access request ensure the user making the request has
the `requester` role.

For the plugin to know which ServiceNow rotations to check for the
auto approval flow, the rotation you wish users to be checked against
must be included in one of the requesting user's roles. To do so, add the `teleport.dev/schedules` annotation as shown in the following example:

```yaml
kind: role
version: v5
metadata:
  name: YOUR_ROLE_NAME_HERE
spec:
  allow:
    request:
      roles: ['editor']
      thresholds:
        - approve: 1
          deny: 1
      annotations:
        teleport.dev/schedules:
        - YOUR_SERVICENOW_ROTA_ID_HERE
```

To retrieve the ServiceNow rotation ID, navigate to the group record
of the ServiceNow group the rotation belongs to and right click on
header, then click 'Select copy sys\_id' to copy the ID.

Then using the ServiceNow endpoint '/api/now/on\_call\_rota/workbench/group/{groupSysId}'
retrieve the group's on-call rota information.
Select the value of the desired 'rota' from the response.

## Step 3/4. Configure the ServiceNow plugin

At this point, you have a ServiceNow user that the ServiceNow plugin will use
to connect to the ServiceNow API. To configure the plugin to use this user navigate
to Management -> Integrations -> Enroll New Integration.

<img src="/assets/servicenow-integration-page-f7a94b1da2.png" alt="Integrations page" width="972" height="928" />

The plugin requires credentials that can read and write to the incident table.

## Step 4/4. Test the ServiceNow plugin

### Create an Access Request

As the Teleport user `myuser`, create an Access Request for the `editor` role:

<Tabs>
  <Tab title="As an Admin">
    A Teleport admin can create an Access Request for another user with `tctl`:

    ```code
    $ tctl request create myuser --roles=editor
    ```
  </Tab>

  <Tab title="As a User">
    Users can use `tsh` to create an Access Request and log in with approved roles:

    ```code
    $ tsh request create --roles=editor
    Seeking request approval... (id: 8f77d2d1-2bbf-4031-a300-58926237a807)
    ```
  </Tab>

  <Tab title="From the Web UI">
    Users can request access using the Web UI by visiting the "Access Requests"
    tab and clicking "New Request":

        <img src="/assets/request-access-989f648dce.png" alt="Creating an Access Request using the Web UI" width="2436" height="1370" />
  </Tab>
</Tabs>

In ServiceNow, you will see a new incident containing information about the
Access Request.

If the a ServiceNow rotation was specified in the requester's role annotations,
then the ServiceNow plugin will check that the requester's username matches the
ServiceNow user currently on-call in that rotation and approve the Access Request.

### Resolve the request

Once you receive an Access Request message, click the link to visit Teleport and
approve or deny the request:

<img src="/assets/review-request-a35de046df.png" alt="Reviewing a request" width="2436" height="1370" />

<Accordion title="Reviewing from the command line">
  You can also review an Access Request from the command line:

  <Tabs>
    <Tab title="As an Admin">
      ```code
      # Replace REQUEST_ID with the id of the request
      $ tctl request approve REQUEST_ID
      $ tctl request deny REQUEST_ID
      ```
    </Tab>

    <Tab title="As a User">
      ```code
      # Replace REQUEST_ID with the id of the request
      $ tsh request review --approve REQUEST_ID
      $ tsh request review --deny REQUEST_ID
      ```
    </Tab>
  </Tabs>
</Accordion>
